# kexplorer-gui

./: .gitmodules  CMakeLists.txt  README.md  kexplorer-version.h.in
include/kxclient/: kxclient.hpp  log.hpp  qvariantconverter.hpp  settings.hpp
src/kexplorer/: CMakeLists.txt  kexplorer.manifest  kexplorer.qrc  kexplorer.rc  logger.cpp  logger.hpp  main.cpp  settings.hpp
submodules/kexplorer-server/src/kexplorer-server/: logger.hxx
